--- a/day_1_basic_data_types_exercise.ipynb
+++ b/day_1_basic_data_types_exercise.ipynb
@@ -381,6 +381,73 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 10. Given a string of odd length greater than 7, return a new string made of the middle three characters of a given String\n",
+    "\n",
+    "Given: `str1 = \"JhonDipPeta\"` <br>\n",
+    "Output: `Dip`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11. Given two strings, s1 and s2, create a new string by appending s2 in the middle of s1\n",
+    "\n",
+    "Given:\n",
+    "```\n",
+    "s1 = \"Ault\"\n",
+    "s2 = \"Kelly\"\n",
+    "```\n",
+    "\n",
+    "Output: `AuKellylt`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
