--- a/day_2_python_programming_challenge.ipynb
+++ b/day_2_python_programming_challenge.ipynb
@@ -4,6 +4,488 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exception Handling\n",
+    "\n",
+    "Now, let's go to **errors and exception handling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_list = [\"a\",\"data science\", 0, \"data\", 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* transform all strings from list to upper, if the element is not string don't transform it\n",
+    "* use try except block without use of 'if' statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We have the function created below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luke Skywalker has family and friends. Help him remind them who is who. Given a string with a name, return the relation of that person to Luke.\n",
+    "\n",
+    "**Person --> Relation**\n",
+    "- Darth Vader --> father\n",
+    "- Leia --> sister\n",
+    "- Han --> brother in law\n",
+    "- R2D2 --> droid\n",
+    "\n",
+    "#### Examples\n",
+    "\n",
+    "> relation_to_luke(\"Darth Vader\") ➞ \"Luke, I am your father.\"\n",
+    ">\n",
+    "> relation_to_luke(\"Leia\") ➞ \"Luke, I am your sister.\"\n",
+    ">\n",
+    "> relation_to_luke(\"Han\") ➞ \"Luke, I am your brother in law.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relation_to_luke(text):\n",
+    "    _dict = []\n",
+    "    _dict[\"Darth Vader\"] = \"father\"\n",
+    "    _dict[\"Leia\"] = \"sister\"\n",
+    "    _dict[\"Ham\"] = \"brother in law\"\n",
+    "    _dict[\"R2D2\"] = \"droid\"\n",
+    "    print(f\"Luke, I am your {+ _dict[text]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task I\n",
+    "Fix errors in the function above so we can run following code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-dd006f5aa63b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrelation_to_luke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Darth Vader\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrelation_to_luke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Leia\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrelation_to_luke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Han\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrelation_to_luke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"R2D2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-8f7792ef279b>\u001b[0m in \u001b[0;36mrelation_to_luke\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrelation_to_luke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0m_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0m_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Darth Vader\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"father\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0m_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Leia\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"sister\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0m_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Ham\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"brother in law\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "relation_to_luke(\"Darth Vader\")\n",
+    "relation_to_luke(\"Leia\")\n",
+    "relation_to_luke(\"Han\")\n",
+    "relation_to_luke(\"R2D2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task II\n",
+    "Use exception handling so we can run the function with any string. In this case, the function will return following:\n",
+    "\n",
+    "**relation_to_luke(\"aaaa\") ➞ \"aaaa is not in the relation with Luke\"**\n",
+    "\n",
+    "> #### Note\n",
+    "> We **cannot** use **if** statement for this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time & Date Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:59:43.427172Z",
+     "start_time": "2020-04-23T12:59:43.421241Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:52:58.201151Z",
+     "start_time": "2020-04-23T12:52:58.193651Z"
+    }
+   },
+   "source": [
+    "**print:**\n",
+    "1.  Current date and time\n",
+    "2.  Current year\n",
+    "3.  Month of year\n",
+    "4.  Week number of the year\n",
+    "5.  Weekday of the week\n",
+    "6.  Day of year\n",
+    "7.  Day of the month\n",
+    "8.  Day of week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:53:26.216074Z",
+     "start_time": "2020-04-23T12:53:26.206960Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* convert a string to datetime\n",
+    "* **string** = *'Jan 1 2014 2:43PM'*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:53:52.241615Z",
+     "start_time": "2020-04-23T12:53:52.231428Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* print the current time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T18:16:28.915595Z",
+     "start_time": "2020-03-11T18:16:28.909658Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* subtract five days from current date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:54:56.116690Z",
+     "start_time": "2020-04-23T12:54:56.111293Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:55:10.916163Z",
+     "start_time": "2020-04-23T12:55:10.910245Z"
+    }
+   },
+   "source": [
+    "* convert unix timestamp string to readable date\n",
+    "* **unix** = *1284105682*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T18:19:02.952818Z",
+     "start_time": "2020-03-11T18:19:02.946930Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:56:00.886007Z",
+     "start_time": "2020-04-23T12:56:00.878697Z"
+    }
+   },
+   "source": [
+    "* convert today's date to Day of Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:55:58.575327Z",
+     "start_time": "2020-04-23T12:55:58.553895Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* get week number from today's date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:56:28.577424Z",
+     "start_time": "2020-04-23T12:56:28.572138Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:56:43.939475Z",
+     "start_time": "2020-04-23T12:56:43.932915Z"
+    }
+   },
+   "source": [
+    "* get the number of days between the two dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:59:47.672905Z",
+     "start_time": "2020-04-23T12:59:47.667373Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "date_a = datetime.date(2020,2,2)\n",
+    "date_b = datetime.date(2020,1,1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* get the number of days of the given month and year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:59:48.516068Z",
+     "start_time": "2020-04-23T12:59:48.511765Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "month = 10\n",
+    "year = 2016\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* get a list of dates between the two dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:59:53.461312Z",
+     "start_time": "2020-04-23T12:59:53.456769Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "start_dt = datetime.date(2015, 12, 20)\n",
+    "end_dt = datetime.date(2016, 1, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python Programming Challenge"
    ]
   },
